# CueMesh

./: .gitignore  README.md  cuemesh_client_token.json  pyproject.toml
client/: __main__.py  clock_client.py  connection.py  discovery_browser.py  mpv_controller.py
client/ui/: connect_screen.py  main_window.py  playback_overlay.py  test_screen.py
controller/: __main__.py  app_state.py  discovery.py  log_aggregator.py  preflight.py  server.py
controller/ui/: client_manager.py  diagnostics.py  main_window.py  run_mode.py  show_editor.py  show_manager.py
docs/: encoding_presets.md  troubleshooting.md  user_guide.md
examples/: example_show.cuemesh.toml
scripts/: build_linux_x86.sh  build_pi4.sh  build_windows.bat
shared/: clock_sync.py  hashing.py  logging_utils.py  protocol.py  show.py
tests/: test_clock_sync.py  test_hashing.py  test_protocol.py  test_show.py
