[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuemesh"
version = "0.1.0"
description = "Open-source portable offline LAN-only synchronized video/image playback for small theatres"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "websockets>=12.0",
    "zeroconf>=0.131.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cuemesh-controller = "controller.__main__:main"
cuemesh-client = "client.__main__:main"

[tool.setuptools.packages.find]
include = ["controller*", "client*", "shared*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]